@@ -128,7 +128,7 @@ be_visitor_operation_thru_poa_proxy_impl_ss::visit_operation (
         }
     }
 
-  *os << be_nl 
+  *os << be_nl
       << "TAO_Object_Adapter::Servant_Upcall servant_upcall ("
       << be_idt << be_idt_nl
       << "_collocated_tao_target_->_stubobj ()"
@@ -137,9 +137,9 @@ be_visitor_operation_thru_poa_proxy_impl_ss::visit_operation (
       << ");" << be_uidt_nl
       << "CORBA::Object_var forward_to;" << be_nl
       << "servant_upcall.prepare_for_upcall (" << be_idt << be_idt_nl
-      << "_collocated_tao_target_->_object_key ()," << be_nl
+      << "_collocated_tao_target_->_stubobj ()->profile_in_use ()->object_key ()," << be_nl
       << "\"";
-      
+
   // Check if we are an attribute node in disguise.
   if (this->ctx_->attribute ())
     {
