@@ -1,5 +1,13 @@
-Mon Mar 03 14:07:10 2003  Balachandran Natarajan  <bala@cs.wustl.edu>
+Fri Mar 07 09:49:35 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
+	* TAO_IDL/be/be_codegen.cpp:
+	* TAO_IDL/be_visitor_operation/thru_poa_proxy_impl_ss.cpp: Changed
+	  the generated code to call object_key () on the stub object
+	  within the CORBA::Object instead of callong _object_key (). 
+
+Mon Mar 03 14:07:10 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	This is just a temporary checkin to test it on another box.
 	* tao/IOP_Codec.pidl:
 	* tao/IOP_IOR.pidl: New files. 
 	
